<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainthemecolor"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_70sdp"
        android:text="@string/lbllogin"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEnterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/entrusrnm"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etname"
        app:layout_constraintStart_toStartOf="@+id/etname" />

    <EditText
        android:id="@+id/etname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_80sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        tools:text="Saurabh Kishor Patil"
        android:background="@drawable/et_border"
        android:longClickable="false"
        android:maxLength="30"
        android:maxLines="1"
        android:paddingStart="@dimen/_12sdp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvEnterPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_38sdp"
        android:text="@string/entrpass"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvEnterName"
        app:layout_constraintTop_toBottomOf="@+id/etname" />

    <TextView
        android:id="@+id/tvforgettpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frgttpass"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/etpass"
        app:layout_constraintTop_toBottomOf="@+id/etpass" />

    <EditText
        android:id="@+id/etpass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:background="@drawable/et_border"
        android:inputType="textPassword"
        android:longClickable="false"
        android:maxLength="30"
        android:maxLines="1"
        android:paddingStart="@dimen/_12sdp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterPass"
        tools:text="alsdfkjasldkfjlasdfjk" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:backgroundTint="@color/white"
        android:padding="@dimen/_12sdp"
        android:text="@string/lbllogin"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvforgettpass" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:backgroundTint="@color/white"
        android:padding="@dimen/_12sdp"
        android:text="@string/wnttosignup"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>