<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainthemecolor"
    tools:context=".view.RegisterActivity">
    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/singup"
        android:textColor="@color/white"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_68sdp"
        app:layout_constraintTop_toBottomOf="@id/tvSignup">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvEnterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_28sdp"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/entrname"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                tools:text="Saurabh Kishor Patil"
                android:background="@drawable/et_border"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:longClickable="false"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingStart="@dimen/_12sdp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEnterName" />

            <TextView
                android:id="@+id/tvEnterEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_34sdp"
                android:text="@string/entremail"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etname" />

            <EditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                tools:text="sp365953@gmail.com"
                android:background="@drawable/et_border"
                android:longClickable="false"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingStart="@dimen/_12sdp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEnterEmail" />

            <TextView
                android:id="@+id/tventrvldeml"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="@string/entrvldemail"
                android:visibility="gone"
                android:layout_marginEnd="@dimen/_4sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="@+id/etemail"
                app:layout_constraintTop_toBottomOf="@id/etemail" />

            <TextView
                android:id="@+id/tvEnterMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_34sdp"
                android:text="@string/entrmobile"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etemail" />

            <EditText
                android:id="@+id/etmobile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                tools:text="9834665335"
                android:background="@drawable/et_border"
                android:inputType="number"
                android:longClickable="false"
                android:maxLength="15"
                android:maxLines="1"
                android:paddingStart="@dimen/_12sdp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEnterMobile" />

            <TextView
                android:id="@+id/tvEnterAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_34sdp"
                android:text="@string/entraddress"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etmobile" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                tools:text="Abhay College,Ram Nagar Near Abhay Colege"
                android:background="@drawable/et_border"
                android:inputType="text"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:longClickable="false"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingStart="@dimen/_12sdp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEnterAddress" />

            <TextView
                android:id="@+id/tvusecurrlocation"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblusecurrlocation"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="@+id/etAddress"
                app:layout_constraintTop_toBottomOf="@+id/etAddress" />

            <TextView
                android:id="@+id/tvEnterUsernmae"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/entrusrnm"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvusecurrlocation" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                tools:text="Abhay College,Ram Nagar Near Abhay Colege"
                android:background="@drawable/et_border"
                android:inputType="text"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:longClickable="false"
                android:maxLength="80"
                android:maxLines="1"
                android:paddingStart="@dimen/_12sdp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEnterUsernmae" />

            <TextView
                android:id="@+id/tvEnterpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_34sdp"
                android:text="@string/entrpass"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etUsername" />

            <EditText
                android:id="@+id/etpasswrod"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                tools:text="Abhay College,Ram Nagar Near Abhay Colege"
                android:background="@drawable/et_border"
                android:inputType="textPassword"
                android:longClickable="false"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingStart="@dimen/_12sdp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEnterpass" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/_18sdp"
                android:text="@string/singup"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:backgroundTint="@color/white"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_28sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@id/etpasswrod" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>